--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2482,3 +2482,10 @@ img[height] {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+.topright {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  font-size: 18px;
+}
